--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "engines": {
     "node": ">=10"
   },
+  "main": "template.json",
   "repository": {
     "type": "git",
     "url": "https://github.com/Feorice/cra-template-recoil-typescript.git"
